<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_perfil"
            android:title="@string/perfil" />
        <!--item
            android:id="@+id/nav_categoria"
            android:icon="@drawable/ic_categoria"
            android:title="@string/categoria" /-->

        <!--item
            android:id="@+id/nav_ofertas"
            android:icon="@drawable/ic_ofertas"
            android:title="@string/ofertas" /-->

        <!--item
            android:id="@+id/nav_nuevos_productos"
            android:icon="@drawable/ic_nuevo_pedido"
            android:title="@string/nuevos_productos" /-->

        <item
            android:id="@+id/nav_pedidos"
            android:icon="@drawable/ic_pedidos"
            android:title="Historial de Pedidos" />

        <item
            android:id="@+id/nav_carrito"
            android:icon="@drawable/ic_carrito"
            android:title="@string/carrito" />

        <!--item
            android:id="@+id/cerrar_Sesion"
            android:title="@string/pedidos"
            android:icon="@drawable/ic_carrito"
            android:title="Cerrar Sesion" /-->
    </group>
</menu>